# oxygen-icons

./: .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  128x128@2x  64x64@2x  CMakeLists.txt  CONTRIBUTING  README.md  REUSE.toml  breeze_icon_link_copy.rb  icon-copy.sh  icon-move.sh  icon-private-copy.sh  icon-private-move.sh  icon-remove.sh  index.theme  metainfo.yaml  org.kde.oxygenicon.metainfo.xml
autotests/: CMakeLists.txt  dupetest.cpp  newlinetest.cpp  symlinktest.cpp  testdata.h.cmake  testhelpers.h
scalable/actions/: im-user-online.svgz  kt-magnet.svgz  list-add.svgz  plugins.svgz  sidebar-collapse-right.svgz  sidebar-collapse.svgz  sidebar-expand-right.svgz  sidebar-expand.svgz  skg-chart-bubble.svgz  skrooge_credit_card.svgz  skrooge_less.svgz  skrooge_more.svgz  skrooge_much_less.svgz  skrooge_much_more.svgz  skrooge_type.svgz  speedometer.svgz  system-user-prompt.svgz
scalable/actions/hidef/: speedometer.svgz
scalable/actions/small/16x16/: document-replace.svgz  document-scan.svgz  edit-select-none.svgz  sidebar-collapse-right.svgz  sidebar-collapse.svgz  sidebar-expand-right.svgz  sidebar-expand.svgz  speedometer.svgz  window-pin.svgz  window-unpin.svgz
scalable/actions/small/22x22/: document-scan.svgz  edit-select-none.svgz  kt-magnet.svgz  sidebar-collapse-right.svgz  sidebar-collapse.svgz  sidebar-expand-right.svgz  sidebar-expand.svgz  speedometer.svgz  window-pin.svgz  window-unpin.svgz
scalable/actions/small/32x32/: document-scan.svgz  edit-select-none.svgz  im-user-online.svgz  kt-magnet.svgz  sidebar-collapse-right.svgz  sidebar-collapse.svgz  sidebar-expand-right.svgz  sidebar-expand.svgz  speedometer.svgz
scalable/actions/small/48x48/: document-scan.svgz  edit-select-none.svgz  kt-magnet.svgz  sidebar-collapse-right.svgz  sidebar-collapse.svgz  sidebar-expand-right.svgz  sidebar-expand.svgz  speedometer.svgz
scalable/apps/: artikulate.svgz  dragonplayer.svgz  help-browser.svgz  juk.svgz  kamoso.svgz  kdf.svgz  keepsecret.svgz  kommit.svgz  kopete-offline.svgz  kopete.svgz  org.kde.krecorder.svgz  org.kde.neochat.svgz  preferences-desktop-display-color.svgz  preferences-desktop-display.svgz  preferences-desktop-notification-bell.svgz  preferences-desktop-search.svgz  preferences-desktop-thunderbolt.svgz  preferences-system-login.svgz  preferences-system-network-ethernet.svgz  skrooge-black.svgz  skrooge-initial.svgz  skrooge.svgz  spectacle.svgz  system-software-install.svgz  wayland.svgz
scalable/apps/hidef/: juk.svgz  kamoso.svgz  preferences-desktop-display-color.svgz  preferences-desktop-display.svgz  preferences-desktop-thunderbolt.svgz  preferences-system-login.svgz  preferences-system-network-ethernet.svgz  spectacle.svgz
scalable/apps/small/16x16/: dolphin.svgz  help-browser.svgz  kamoso.svgz  kommit.svgz  neochat.svgz  preferences-desktop-display-color.svgz  preferences-system-login.svgz  skrooge.svgz  wayland.svgz
scalable/apps/small/22x22/: dolphin.svgz  help-browser.svgz  juk.svgz  kamoso.svgz  kdf.svgz  kommit.svgz  neochat.svgz  preferences-desktop-display-color.svgz  preferences-desktop-notification-bell.svgz  preferences-system-loginz.svgz  skrooge.svgz
scalable/apps/small/32x32/: dolphin.svgz  help-browser.svgz  juk.svgz  kamoso.svgz  kdf.svgz  kommit.svgz  neochat.svgz  org.kde.krecorder.svgz  preferences-desktop-display-color.svgz  preferences-desktop-display.svgz  preferences-desktop-search.svgz  preferences-desktop-thunderbolt.svgz  preferences-system-loginz.svgz  preferences-system-network-ethernet.svgz  skrooge.svgz  spectacle.svgz  wayland.svgz
scalable/apps/small/48x48/: help-browser.svgz  juk.svgz  kamoso.svgz  kdf.svgz  keepsecret.svgz  kommit.svgz  neochat.svgz  org.kde.krecorder.svgz  skrooge.svgz  spectacle.svgz  (+2 more)
scalable/categories/: applications-all.svgz  preferences-devices-printer.svgz  preferences-kde-connect.svgz  system-users.svgz
scalable/categories/hidef/: applications-all.svgz  system-users.svgz
scalable/devices/: audio-input-microphone.svgz  camera-video.svgz  camera-web.svgz  computer-laptop3.svgz  printer.svgz
scalable/devices/hidef/: camera-video.svgz  camera-web.svgz  printer.svgz
scalable/emblems/: emblem-music.svgz
scalable/mimetypes/: android-package-archive.svgz  application-json.svgz  application-toml.svgz  application-vnd.appimage.svgz  application-vnd.flatpak.ref.svgz  application-vnd.snap.svgz  application-x-skg.svgz  application-x-skgc.svgz  application-x-theme.svgz  text-rust.svgz
scalable/mimetypes/hidef/: android-package-archive.svgz  application-json.svgz  application-toml.svgz  application-vnd.appimage.svgz  application-vnd.flatpak.ref.svgz  application-vnd.snap.svgz  application-x-theme.svgz  text-rust.svgz
scalable/places/: compass.svgz  folder-games.svgz
scalable/places/hidef/: compass.svgz
scalable/preferences/: preferences-desktop-wallpaper.svgz  preferences-devices-printer.svgz  preferences-kde-connect.svgz
scalable/preferences/highdef/: preferences-kde-connect.svgz
scalable/status/: battery-010.svgz  battery-030-charging.svgz  battery-030.svgz  battery-050-charging.svgz  battery-050.svgz  battery-070.svgz  battery-090.svgz  battery-charging-010.svgz  battery-charging-030.svgz  battery-charging-050.svgz  battery-charging-090.svgz  update-high.svgz  update-low.svgz  update-medium.svgz  update-none.svgz
(+117 files in other folders)
